# SDL2-CMake-VS

./: CMakeLists.txt  CMakeSettings.json
pong/: CMakeLists.txt
